# yomikata

./: LICENSE  PLAN.md  README.md  pyproject.toml
src/yomikata/: app.py  pipeline.py
src/yomikata/atspi/: cursor.py  extractor.py
src/yomikata/dictionary/: backend.py  jmdict.py  kanjidic.py  sqlite.py
src/yomikata/hover/: debounce.py  monitor.py  pointer_source.py
src/yomikata/popup/: __init__.py  renderer.py  style.css  window.py
src/yomikata/resolution/: resolver.py
src/yomikata/sentence/: extractor.py
src/yomikata/settings/: window.py
src/yomikata/tokenizer/: conjugation.py  sudachi.py
src/yomikata/util/: config.py  logging.py  session.py
tests/: test_pipeline.py
tests/atspi/: test_atspi_backend.py  test_cursor.py  test_extractor.py  test_extractor_integration.py
tests/dictionary/: test_jmdict.py  test_kanjidic.py  test_sqlite.py
tests/hover/: test_debounce.py  test_monitor.py
tests/popup/: test_renderer.py  test_window.py
tests/resolution/: test_resolver.py
tests/sentence/: test_extractor.py
tests/settings/: test_window.py
tests/tokenizer/: test_conjugation.py  test_sudachi.py
tests/util/: test_config.py  test_logging.py  test_session.py
