[project]
name = "yomikata"
version = "0.1.0"
description = "Native Japanese hover dictionary for Ubuntu using the Linux Accessibility (AT-SPI) framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "python-xlib>=0.33",
    "sudachidict-core>=20260428",
    "sudachipy>=0.6.11",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yomikata"]

[project.scripts]
yomikata = "yomikata.app:main"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "gi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sudachipy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
